# tap

./: .gitignore  README.md  arch.md  pyproject.toml  system_design.md
dev/: checklist.md
src/contex/cli/: .matches.json  contex_cli.py
src/contex/database/chroma/: load_vault.py
src/contex/database/obsidian/: obsidian_path.py  titles.py  vault.py
src/contex/obsidian/: obsidian_CRUD.py  titles.py
src/contex/query/: fuzzy.py  similarity.py
src/tap/cli/: main.py  parser.py  router.py
src/tap/cli/commands/: alias.py  pool.py  search.py  stow.py
src/tap/database/chroma/: load_vault.py
src/tap/database/obsidian/: obsidian_note.py
src/tap/search/: match_class.py  similarity.py
