[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contex"
version = "0.1.0"
description = "the poor man's siphon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "database-clients",
    "rapidfuzz>=3.14.1",
    "sentence-transformers>=5.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contex"]
sources = ["src"]
include = ["src/contex/py.typed"]

# ── uv sources (local/editable deps) ───────────────────────────────────────────
[tool.uv.sources]
database-clients = { path = "../database-clients", editable = true }

# ── Scripts ────────────────────────────────────────────────────────────────────
[project.scripts]
tap = "contex.cli.contex_cli:main"
