[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tap"
version = "0.1.0"
description = "for now, the poor man's siphon and a replacement for obsidian's bad search. Eventually: a shell, with MCP, my replacement for claude desktop."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "database-clients",
    "rapidfuzz>=3.14.1",
    "sentence-transformers>=5.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tap"]
sources = ["src"]
include = ["src/tap/py.typed"]

# ── uv sources (local/editable deps) ───────────────────────────────────────────
[tool.uv.sources]
database-clients = { path = "../database-clients", editable = true }

# ── Scripts ────────────────────────────────────────────────────────────────────
[project.scripts]
tap = "tap.cli.main:main"
